# comparative-analysis-among-strains

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: Chromosome_refseq2roman_new_unix.sh  Domains_all_genes_protein_coordinates_yeastmine.tsv  Gene_Introns.tsv  Gene_Protein_length_yeastmine.tsv  centromeres_genomic_locations.csv  erase_processed_wig-files.sh  essential_genes_wt_dbem1_dbem13.txt  from_systematic_genenames2standard_genenames.csv
docs/: .~lock.analysis-chapter-2.odp#  01122021-next-steps-after-holidays.md  analysis-chapter-2.odp  scores  scores_benoit4essentiality.html  scores_benoit4essentiality.md  scores_function_workflow  which_types_of_analysis_are_performed.md
figures/: essential_wt_domains_summary.txt
postprocessed-data/: .~lock.postprocessed_data_all_backgrounds.xlsx#  BEM1_genetic_interactions_filtered_by_negat.txt  BEM1_genetic_interactions_filtered_by_pos.txt  BEM1_genetic_interactions_filtered_by_synt.txt  BEM3_genetic_interactions_filtered_by_pos.txt  NRP1_genetic_interactions_filtered_by_neg.txt  NRP1_genetic_interactions_filtered_by_pos.txt  NRP1_negative_satay_genes.txt  NRP1_positive_satay_genes.txt  NRP1_protein_properties.txt  WHI3_protein_properties.txt  discarded_genes_all_backgrounds  discarded_genes_by_duplication.txt  discarded_genes_dbem1.txt  discarded_genes_dbem13.txt  discarded_genes_dbem3.txt  discarded_genes_wt.txt  down-regulated-genes-dnrp1  essential_genes_wt_dbem1_dbem13.txt  essentials_genes_yeast.txt  genes_down_dnrp1.txt  genes_down_dnrp1_go_stats_component.txt  genes_down_dnrp1_go_stats_function.txt  (+31 more)
(+257 files in other folders)
